--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 build
 debugpy
 distlib
@@ -6,11 +5,8 @@ Faker
 Flask
 Flask-Login
 Flask-Migrate
-Flask-MySQLdb
 Flask-SQLAlchemy
 keras
-mysql-connector-python
-mysqlclient==2.0.0
 nltk
 numpy
 pandas
@@ -29,3 +25,6 @@ virtualenv
 wcwidth
 Werkzeug
 chardet
+openpyxl
+duckduckgo-search
+psycopg2
