--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Python
+__pycache__/
+*.pyc
+
+# Environments
+.env
+venv/
+
+# OS/editor
+.DS_Store
+.idea/
+.vscode/
+
+# Large artifacts kept outside Git
+*.pkl
+*.joblib
+*.rar
+dist/
+instance/
+database.db
+*.sqlite3
+
+# Notebooks checkpoints
+.ipynb_checkpoints/
 __pycache__/
 .venv/
 venv/
